Fix responsive of the game on mobile

--- a/style.scss
+++ b/style.scss
@@ -123,6 +123,7 @@ main {
   @media (max-width: 800px) {
     width: 100%;
     flex-wrap: wrap;
+    padding: 40px 0;
   }
 
   .game_content {
@@ -263,6 +264,7 @@ main {
 
     @media (max-width: 800px) {
       width: 70%;
+      transform: scale(0.8);
     }
 
     @media (max-width: 500px) {
